--- a/package.json
+++ b/package.json
@@ -15,5 +15,19 @@
   "bugs": {
     "url": "https://github.com/Arliin23/GBH_Practice_WebDriverIOPOM/issues"
   },
-  "homepage": "https://github.com/Arliin23/GBH_Practice_WebDriverIOPOM#readme"
+  "homepage": "https://github.com/Arliin23/GBH_Practice_WebDriverIOPOM#readme",
+  "dependencies": {
+    "@wdio/cli": "^6.4.2",
+    "chai": "^4.2.0",
+    "chai-webdriver": "^1.2.3",
+    "webdriverio": "^6.4.2"
+  },
+  "devDependencies": {
+    "@wdio/dot-reporter": "^6.4.0",
+    "@wdio/local-runner": "^6.4.2",
+    "@wdio/mocha-framework": "^6.4.0",
+    "@wdio/selenium-standalone-service": "^6.4.0",
+    "@wdio/spec-reporter": "^6.4.0",
+    "@wdio/sync": "^6.4.0"
+  }
 }
