Added classes HomePage and Innovation Squad Page; Added test cases for navigate through homepage to Innovation Squad Page and confirm that you are in that page

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@wdio/mocha-framework": "^6.4.0",
     "@wdio/selenium-standalone-service": "^6.4.0",
     "@wdio/spec-reporter": "^6.4.0",
-    "@wdio/sync": "^6.4.0"
+    "@wdio/sync": "^6.4.0",
+    "chai-webdriverio": "^1.0.0"
   }
 }
